# traceforge

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/traceforge/: __init__.py  __main__.py  annotations.py  api_profile.py  artifacts.py  bundles.py  callgraph.py  capabilities.py  carve.py  case_db.py  cli.py  code_map.py  core.py  core_types.py  disasm.py  format_profile.py  formats.py  graph.py  hunt.py  payloads.py  reports.py  rules.py  ruleset.py  schemas.py  score.py  search.py  signatures.py  symbols.py  viewer.py  workspace.py  workspace_viewer.py
tests/: test_annotations.py  test_api_profile.py  test_artifacts.py  test_bundles.py  test_callgraph.py  test_capabilities.py  test_case_db.py  test_cli.py  test_code_map.py  test_core.py  test_format_profile.py  test_formats.py  test_graph.py  test_hunt.py  test_packaging.py  test_payloads.py  test_reports.py  test_rules_and_carve.py  test_ruleset.py  test_schemas.py  test_search.py  test_signatures.py  test_symbols.py  test_viewer.py  test_workspace.py  test_workspace_viewer.py
