[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceforge"
version = "0.1.0"
description = "Read local files as bytes, extract facts, and write case reports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
traceforge = "traceforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
