[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceforge"
version = "0.25.0"
description = "Offline file inspection workbench with format parsers, local rules, graphs, and reports."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Mono GlaShyiz", email = "varffdg@gmail.com" }]
keywords = [
    "binary-analysis",
    "file-inspection",
    "malware-analysis",
    "reverse-engineering",
]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/Wythwool/traceforge"
Issues = "https://github.com/Wythwool/traceforge/issues"

[project.optional-dependencies]
test = ["pytest>=8"]
lint = ["ruff>=0.8"]
disasm = ["capstone>=5.0"]

[project.scripts]
traceforge = "traceforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
